@@ -83,3 +83,8 @@
 2012-09-12  Mike Blumenkrantz
 
         * e_dbus_signal_handler_add() no longer blocks
+
+2012-12-24 Vincent Torri
+
+	* Fix compilation on Windows when there is no .la files
+	* Remove useless variables in configure.ac
